# LangGraph_wiki

./: main.py  pyproject.toml
part1/: 1.1 소개.ipynb  1.2 환경설정.ipynb  1.3 StateGraph.ipynb  1.3.2 State.ipynb  1.3.3 Node.ipynb  1.3.4 Edge.ipynb  1.3.5 Command.ipynb  1.4 Memory.ipynb  1.4.3 TimeTravel.ipynb
part2/: ReAct 패러다임.ipynb  bind_tools_and_StateGraph.ipynb  create_agent.ipynb  커스텀 Agent.ipynb
